# pogrep

./: .gitignore  LICENSE  README.md  pogrep.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  test_pogrep.py  tox.ini
.github/workflows/: tests.yml
tests/: test_pogrep.py
