[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pogrep"
description = "Find translations examples by grepping in .po files."
authors = [{name = "Julien Palard", email = "julien@palard.fr"}]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
urls = {Homepage = "https://github.com/JulienPalard/pogrep"}
requires-python = ">= 3.6"
dependencies = [
    "regex",
    "polib",
    "tabulate",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.scripts]
pogrep = "pogrep:main"

[tool.setuptools]
py-modules = ["pogrep"]
include-package-data = false

[tool.setuptools.dynamic.version]
attr = "pogrep.__version__"